# energy-core

./: .gitignore  Cargo.toml  README.md
crates/energy-db/: Cargo.toml
crates/energy-db/src/: lib.rs
crates/energy-ha/: Cargo.toml
crates/energy-ha/src/: lib.rs
crates/energy-models/: Cargo.toml
crates/energy-models/src/: lib.rs
migrations/: 20251203011139_initial_setup.sql
services/api-server/: Cargo.toml
services/api-server/src/: main.rs
